Normas em energia

--- a/Energia.html
+++ b/Energia.html
@@ -140,6 +140,7 @@
     </div>
   </div>
   </div>
+  <br>
   <div class="conteudo">
     <div id="center">
       <h1><strong class="textosTitulo"><em> Energia </em> </strong></h1>
@@ -163,10 +164,8 @@
     </blockquote><br>
     </p>
     <div id="center">
-      <img src="Imagens/energia.webp" width="100%" alt="Foto Satelite"><a
-        href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+      <img src="Imagens/energia.webp" width="75%" alt="Foto Satelite"><a
+        href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/"><legend> Imagem Dísponivel Aqui</a></legend>
     </div>
     <br>
     <p class="margem"> A energia é um conceito bem complexo que envolve outro conceito, o trabalho.
@@ -183,16 +182,19 @@
     <p class="margem"> A energia cinética é a energia associada ao movimento de um objeto. Quanto maior a velocidade do
       objeto, maior a
       sua energia cinética.A fórmula para calcular a energia cinética é E = (1/2)mv², onde E é a energia cinética, m é a
-      massa do objeto e v é a sua velocidade.(Melo, 2023).</p>
-    <p class="margem"> A energia potencial é a energia associada à posição de um objeto levando em consideração um ponto de referência.
+      massa do objeto e v é a sua velocidade.(MELO, 2023).</p>
+    <p class="margem"> A energia potencial é a energia associada à posição de um objeto levando em consideração um ponto
+      de referência.
       Um objeto colocado em uma posição mais alta em relação ao solo, por exemplo, possui mais energia potencial do que
-      um objeto na mesma posição, mas mais próximo ao solo.(Melo, 2023).
+      um objeto na mesma posição, mas mais próximo ao solo.(MELO, 2023).
     </p>
     <br>
-    <img src="Imagens/montanharussa.jpeg" width="100%" alt="Foto Satelite">
-    <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/montanha-russa-vermelha-1208055/">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+    <div id="center">
+      <img src="Imagens/montanharussa.jpeg" width="75%" alt="Foto Satelite">
+      <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/montanha-russa-vermelha-1208055/">
+          Imagem Dísponivel
+          Aqui</a> </legend>
+    </div>
     <br>
     <div id="center">
       <h1><strong class="textosTitulo"><em>Energia Térmica </em> </strong></h1>
@@ -211,12 +213,14 @@
       esse grau de agitação para todas as moléculas até que todas estejam na mesma frequência de agitação.(ANJOS, 2023)
     </p>
     <br>
-    <img src="Imagens/quente e frio  educador.webp" width="100%" alt="Foto Satelite">
-    
-        <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
-            Imagem Dísponivel
-            Aqui</a> </legend>
+    <div id="center">
+      <img src="Imagens/quente e frio  educador.webp" width="75%" alt="Foto Satelite">
+
+      <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
+          Imagem Dísponivel
+          Aqui</a> </legend>
       </a> </legend>
+    </div>
     <br>
     <div id="center">
       <h1><strong class="textosTitulo"><em> Energia Elétrica </em> </strong></h1>
@@ -226,12 +230,14 @@
       de um condutor. Essa energia é fundamental para o funcionamento de diversas tecnologias e equipamentos, desde
       lâmpadas e motores elétricos até celulares e computadores. (HELERBROCK, 2023).</p>
     <br>
-    <img
-      src="Imagens/png-transparent-incandescent-light-bulb-graphy-lighting-bulb-light-photography-innovation-business-removebg-preview.png"
-      width="100%" alt="Foto Satelite">
-    <legend style="text-align: center;"><a href="https://www.pngwing.com/pt/free-png-yeuqj">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+    <div id="center">
+      <img
+        src="Imagens/png-transparent-incandescent-light-bulb-graphy-lighting-bulb-light-photography-innovation-business-removebg-preview.png"
+        width="75%" alt="Foto Satelite">
+      <legend style="text-align: center;"><a href="https://www.pngwing.com/pt/free-png-yeuqj">
+          Imagem Dísponivel
+          Aqui</a> </legend>
+    </div>
     <br>
     <p class="margem">A unidade de medida da energia elétrica é o watt-hora (Wh), que indica a quantidade de energia
       consumida por um
@@ -261,10 +267,12 @@
       que é transformada em calor e energia mecânica, por exemplo, para mover um carro ou gerar eletricidade em uma
       usina.(HELERBROCK, 2023).</p>
     <br>
-    <img src="Imagens/1618504738242.png" width="100%" alt="Foto Satelite">
-    <legend style="text-align: center;"><a href="https://megawhat.energy/verbetes/320/energia-quimica">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+    <div id="center">
+      <img src="Imagens/1618504738242.png" width="75%" alt="Foto Satelite">
+      <legend style="text-align: center;"><a href="https://megawhat.energy/verbetes/320/energia-quimica">
+          Imagem Dísponivel
+          Aqui</a> </legend>
+    </div>
     <div id="center">
       <h1><strong class="textosTitulo"><em> Energia Atomica </em> </strong></h1>
     </div>
@@ -281,11 +289,13 @@
       grande quantidade
       de energia. Essa energia pode ser usada para gerar eletricidade em usinas nucleares.(HELERBROCK, 2023).</p>
     <br>
-    <img src="Imagens/fissão-nuclear2-768x560.png" width="100%" alt="Foto Satelite">
-    <legend style="text-align: center;"><a
-        href="https://aprovatotal.com.br/fissao-e-fusao-nuclear-o-que-sao-diferencas-e-aplicacoes/">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+    <div id="center">
+      <img src="Imagens/fissão-nuclear2-768x560.png" width="75%" alt="Foto Satelite">
+      <legend style="text-align: center;"><a
+          href="https://aprovatotal.com.br/fissao-e-fusao-nuclear-o-que-sao-diferencas-e-aplicacoes/">
+          Imagem Dísponivel
+          Aqui</a> </legend>
+    </div>
     <br>
     <div id="center">
       <h1><strong class="textosTitulo"><em>Fusão Nuclear</em> </strong></h1>
@@ -297,16 +307,19 @@
       segurança significativas, como o risco de acidentes nucleares e a produção de resíduos radioativos que podem ser
       perigosos por centenas de milhares de anos. (HELERBROCK, 2023). </p>
     <br>
-    <img src="Imagens/57a1c0dfb60c3-fusao-nuclear.webp" width="100%" alt="Foto Satelite">
-    <legend style="text-align: center;"><a href="https://www.todamateria.com.br/fusao-nuclear/">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+    <div id="center">
+      <img src="Imagens/57a1c0dfb60c3-fusao-nuclear.webp" width="75%" alt="Foto Satelite">
+      <legend style="text-align: center;"><a href="https://www.todamateria.com.br/fusao-nuclear/">
+          Imagem Dísponivel
+          Aqui</a> </legend>
+    </div>
     <br>
     <p class="margem">
       A energia atômica é uma forma de energia não renovável, já que depende de fontes de urânio e outros elementos
       radioativos que são finitos na Terra. Além disso, o uso da energia nuclear tem implicações ambientais e de
       segurança significativas, como o risco de acidentes nucleares e a produção de resíduos radioativos que podem ser
       perigosos por centenas de milhares de anos. (HELERBROCK, 2023). </p>
+      <br>
   </div>
 
   <div class="rodape"></div>
