--- a/TermoFisica.html
+++ b/TermoFisica.html
@@ -140,23 +140,25 @@
     </div>
   </div>
   </div>
+  <br>
   <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> TermoFísica </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> TermoFísica </em> </strong></h1>
+    </div>
     <br>
     <p class="margem">
 
       Termofísica ou termologia é o ramo da física que estuda o calor, tratado acerca do calor( Dicionário Oxford
       Languages).
-
-
-
-      A termofísica é o estudo do calor, e sobre a temperatura e como ela influencia.
-
-      <br> <img src="Imagens/termometro-5c3e0e41d5615.webp" alt="Foto Satelite">
+      A termofísica é o estudo do calor, e sobre a temperatura e como ela influencia. </p>
+    <br>
+    <div id="center">
+      <img src="Imagens/termometro-5c3e0e41d5615.webp" width="75%" alt="Foto Satelite">
       <legend style="text-align: center;"><a href="https://brasilescola.uol.com.br/fisica/termologia.htm">
           Imagem Dísponivel
           Aqui</a> </legend>
-    </p>
+    </div>
+
     <br>
     <p class="margem">Calor (energia calorífica) é a transferência que vai de um corpo para o outro quando há diferença
       de temperatura
@@ -170,7 +172,9 @@
       Irradiação Térmica: Transferência de calor por ondas eletromagnéticas</p>
     <p class="margem"></p>
     <br>
-    <h1><strong class="textosTitulo"><em> Condução Térmica </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Condução Térmica </em> </strong></h1>
+    </div>
     <br>
     <p class="margem">A condução térmica é um processo de transferência de calor que ocorre quando há uma diferença de
       temperatura
@@ -188,17 +192,24 @@
       eles tem uma condutividade térmica alta, e já os plásticos e madeiras tem um nível de condutividade térmica baixa
       (HELERBROCK, 2023).</p>
     <br>
-    <img src="Imagens/conducao-de-calor-solido(1).webp" alt="Foto Satelite">
-    <legend style="text-align: center;"><a href="https://brasilescola.uol.com.br/fisica/conducao-termica.htm">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+    <div id="center">
+      <img src="Imagens/conducao-de-calor-solido(1).webp" width="75%" alt="Foto Satelite">
+      <legend><a href="https://brasilescola.uol.com.br/fisica/conducao-termica.htm">
+          Imagem Dísponivel
+          Aqui</a> </legend>
+    </div>
     <br>
-    <h1><strong class="textosTitulo"><em>Convecção Térmica </em> </strong></h1>
-    <br>
-    <img src="Imagens/conveccao-no-bule-5c2e5b51c413a.webp" alt="Foto Satelite">
-    <legend style="text-align: center;"><a href="https://brasilescola.uol.com.br/o-que-e/fisica/o-que-e-conveccao.htm">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em>Convecção Térmica </em> </strong></h1>
+      <br>
+    </div>
+    <div id="center">
+      <img src="Imagens/conveccao-no-bule-5c2e5b51c413a.webp" width="75%" alt="Foto Satelite">
+      <legend style="text-align: center;"><a
+          href="https://brasilescola.uol.com.br/o-que-e/fisica/o-que-e-conveccao.htm">
+          Imagem Dísponivel
+          Aqui</a> </legend>
+    </div>
     <br>
     <p class="margem">A convecção térmica é o processo de transferência de calor que ocorre através do movimento de um
       fluido aquecido
@@ -226,7 +237,9 @@
       oceânicas e a circulação atmosférica. Além disso, é um processo fundamental em diversas áreas da engenharia, como
       transferência de calor e mecânica dos fluidos (HELERBROCK, 2023).</p>
     <br>
-    <h1><strong class="textosTitulo"><em>Irradiação Térmica </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em>Irradiação Térmica </em> </strong></h1>
+    </div>
     <br>
     <p class="margem">A radiação térmica é um tipo de transferência de calor que ocorre quando a energia é transferida
       na forma de
@@ -248,10 +261,14 @@
       meio de
       painéis solares.</p>
     <br>
-    <img src="Imagens/os-processos-transmissao-calor-estao-inseridos-no-cotidiano-1315837060.webp" alt="Foto Satelite">
-    <legend style="text-align: center;"><a href="https://brasilescola.uol.com.br/fisica/processo-propagacao-calor.htm">
-        Imagem Dísponivel
-        Aqui</a> </legend>
+    <div id="center">
+      <img src="Imagens/os-processos-transmissao-calor-estao-inseridos-no-cotidiano-1315837060.webp" width="75%"
+        alt="Foto Satelite">
+      <legend style="text-align: center;"><a
+          href="https://brasilescola.uol.com.br/fisica/processo-propagacao-calor.htm">
+          Imagem Dísponivel
+          Aqui</a> </legend>
+    </div>
     <br>
     <p class="margem">Nesta imagem vemos os três tipos de espalhamento do calor ao mesmo tempo.</p>
   </div>
