--- a/CorrentesEletricas.html
+++ b/CorrentesEletricas.html
@@ -136,6 +136,7 @@
     </div>
   </div>
   </div>
+  <br>
   <div class="conteudo">
     <div id="center">
       <h1><strong class="textosTitulo"><em> Correntes Elétricas </em> </strong></h1>
@@ -150,13 +151,14 @@
     <p class="margem">
       Para que ocorra esse movimento o sistema apresenta uma diferença de potencial elétrico(ddp) ou tensão elétrica.
       Quando a energia elétrica passa por resistores ela pode ser transformada em energia térmica, este fenômeno é
-      conhecido como Efeito Joule.(GOUVEIA,2023) <br>
+      conhecido como Efeito Joule.(GOUVEIA,2023) 
     </p>
     <br>
-    Um fio condutor pode facilitar ou dificultar a passagem de uma corrente elétrica, isso é calculado pela fórmula da
-    primeira lei de Ohm (R=U/I), onde R é a resistência elétrica, U é a tensão elétrica e I é a corrente
-    elétrica.(GOUVEIA,2023)
-    <br>
+    <p class="margem">
+      Um fio condutor pode facilitar ou dificultar a passagem de uma corrente elétrica, isso é calculado pela fórmula da
+      primeira lei de Ohm (R=U/I), onde R é a resistência elétrica, U é a tensão elétrica e I é a corrente
+      elétrica.(GOUVEIA,2023)</p>
+
     <br>
     <p class="margem">
       Eletrônicos e pilhas apresentam os pólos positivo e negativo, que é um claro exemplo do diferencial de potencial
@@ -164,7 +166,8 @@
       movimento dos elétrons, e a corrente elétrica convencional que tem sentido contrário ao movimento dos elétrons e
       tem destaque pelo movimento das cargas elétricas positivas.(GOUVEIA,2023)</p>
     <br>
-    <p class="margem">Além do sentido, as correntes elétricas também podem ser classificadas entre corrente contínua
+    <p class="margem">
+      Além do sentido, as correntes elétricas também podem ser classificadas entre corrente contínua
       (CC) e corrente
       alternada (CA). A corrente contínua é gerada por pilhas e baterias, apresenta diferença de potencial (ddp)
       contínua, além disso, possui sentido e intensidade constantes. A corrente alternada é gerada pelas usinas de
@@ -189,7 +192,7 @@
     <p class="margem">A intensidade de uma corrente elétrica refere-se à quantidade de carga elétrica que atravessa um
       condutor durante
       um determinado período de tempo, no (SI) a intensidade é medida em Ampère (A), a intensidade pode ser calculada
-      através da fórmula:</p>
+      através da fórmula (ALVES, 2023):</p>
     <div id="center">
       <img src="Imagens/formula.png" alt="formula">
     </div>
