--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -136,8 +136,12 @@
     </div>
   </div>
   </div>
+  <br>
   <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> Eletricidade </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Eletricidade </em> </strong></h1>
+    </div>
+
     <br>
     <p class="margem">
       A eletricidade pode ser definida como os fenómenos que ocorrem durante o desequilíbrio ou movimentação das cargas
@@ -156,23 +160,27 @@
       <br>
     </p>
     <br>
-    É comum ver a “eletricidade empregada como a quantidade de energia consumida nos circuitos elétricos”
-    (HELERBROCK,2023). Essa energia é chamada de energia potencial elétrica, calculada através da potência elétrica, que
-    trata-se da energia elétrica consumida por um dispositivo a cada segundo. A energia potencial elétrica é comumente
-    medida em KWh, que é uma unidade utilizada principalmente pelas companhias de distribuição de energia elétrica, e
-    além do KWh, essa energia também pode ser medida em joules, a proporção entre essas unidades é: 1KWh = 3,6.10^6 J.
-
+    <p class="margem">
+      É comum ver a “eletricidade empregada como a quantidade de energia consumida nos circuitos elétricos”
+      (HELERBROCK,2023). Essa energia é chamada de energia potencial elétrica, calculada através da potência elétrica,
+      que
+      trata-se da energia elétrica consumida por um dispositivo a cada segundo. A energia potencial elétrica é comumente
+      medida em KWh, que é uma unidade utilizada principalmente pelas companhias de distribuição de energia elétrica, e
+      além do KWh, essa energia também pode ser medida em joules, a proporção entre essas unidades é: 1KWh = 3,6.10^6 J.
+    </p>
 
     <br>
     <p class="margem">
     </p>
     <br>
-    <img src="Imagens/OIG (1).jpeg" alt="Foto Satelite">
-    <legend style="text-align: center;"><a
-        href="https://www.bing.com/images/create/zeus--thunder/6445a481b46741e8889a08fc1d68ba2b?id=vKgb%2ffDZBHfGTVxRoNOc0Q%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&ajaxhist=0&ajaxserp=0">
-        Imagem Dísponivel
-        Aqui</a>
-    </legend>
+    <div id="center">
+      <img src="Imagens/OIG (1).jpeg" width="75%" alt="Foto Satelite">
+      <legend style="text-align: center;"><a
+          href="https://www.bing.com/images/create/zeus--thunder/6445a481b46741e8889a08fc1d68ba2b?id=vKgb%2ffDZBHfGTVxRoNOc0Q%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&ajaxhist=0&ajaxserp=0">
+          Imagem Dísponivel
+          Aqui</a>
+      </legend>
+    </div>
   </div>
 
   <div class="rodape"></div>
