--- a/Optica.html
+++ b/Optica.html
@@ -17,121 +17,121 @@
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-<h1 style="text-align: center;">Tópicos</h1>
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+      <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Bibliografia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Bibliografia.html"><button type="button" class="btn">
+          <strong>Bibliografia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
 
     </div>
-    
+
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
-        class="MenuB">Menu </div></span> 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+        </div></span>
 
     </div>
   </div>
@@ -141,10 +141,10 @@
     <br>
     <p>Parte da física que estuda as leis relativas às radiações luminosas e aos fenômenos da visão.(Dicionário Oxford
       Languages).
-<br>
+      <br>
       <br>
     </p>
-    <img src="Imagens/optica1.png" alt="Foto Satelite" >
+    <img src="Imagens/optica1.png" alt="Foto Satelite">
     <legend style="text-align: center;"><a href="https://mundoeducacao.uol.com.br/fisica/optica-geometrica.html">
         Imagem Dísponivel
         Aqui</a>
@@ -158,14 +158,16 @@
     </p>
     <br>
     <br>
-    <p class="margem"> A óptica geométrica e a óptica física são os dois subcampos da óptica na física clássica. A óptica quântica, por
+    <p class="margem"> A óptica geométrica e a óptica física são os dois subcampos da óptica na física clássica. A
+      óptica quântica, por
       outro lado, é um campo que investiga o comportamento quântico e corpuscular da luz e outras radiações, bem como
       sua interação com a matéria, ao levar em conta os conhecimentos da física contemporânea (HELERBROCK, 2023)
     </p>
     <br>
     <h1><strong class="textosTitulo"><em> Optica-Geometrica</em> </strong></h1>
     <br>
-    <p class="margem">A luz é interpretada pela óptica geométrica como segmentos de uma linha reta, ou raios de luz. A direção e a
+    <p class="margem">A luz é interpretada pela óptica geométrica como segmentos de uma linha reta, ou raios de luz. A
+      direção e a
       direção da propagação da luz são mostradas usando raios de luz. A óptica geométrica sozinha pode explicar uma
       parte significativa dos fenômenos luminosos que experimentamos regularmente, como sombras, eclipses e reflexos da
       luz (HELERBROCK, 2023)
@@ -173,21 +175,25 @@
     <p class="margem">
       Os raios de luz são linhas retas que mostram o caminho da luz, bem como a direção de sua influência. Eles podem
       ser emitidos por dois tipos de fontes:</p>
-    <p class="margem"> Fontes primárias: aqueles com suas próprias capacidades de emissão de luz, como o sol, a chama de uma vela ou
+    <p class="margem"> Fontes primárias: aqueles com suas próprias capacidades de emissão de luz, como o sol, a chama de
+      uma vela ou
       uma lâmpada (GOUVEIA, 2023);
     </p>
-    <p class="margem">Fontes secundárias: que refletem a luz que recebem de uma fonte principal, como um livro que só pode ser visto se
+    <p class="margem">Fontes secundárias: que refletem a luz que recebem de uma fonte principal, como um livro que só
+      pode ser visto se
       refletir a luz que recebe de uma lâmpada ou a lua, que reflete a luz que recebe do sol (MELO, 2023).</p>
     <p class="margem"> As fontes luminosas também podem ser classificadas em relação à sua dimensão (HELERBROCK, 2023):
     </p>
-    <p class="margem">Fontes extensas: quando se descobre que são significativamente maiores do que a coisa a ser iluminada. Por
+    <p class="margem">Fontes extensas: quando se descobre que são significativamente maiores do que a coisa a ser
+      iluminada. Por
       exemplo: uma lâmpada acesa ao lado de um livro (MELO, 2023);</p>
     <p class="margem">
       Fontes pontuais: se o tamanho da fonte de luz fosse considerado insignificante em comparação com o objeto que se
       pretendia iluminar (HELERBROCK, 2023).</p>
     <h1><strong class="textosTitulo"><em>Principios da Optica Geometrica</em> </strong></h1>
     <br>
-    <p class="margem">Essas ideias descrevem como os raios de luz agem em várias circunstâncias. Eles são verdadeiros quando os meios
+    <p class="margem">Essas ideias descrevem como os raios de luz agem em várias circunstâncias. Eles são verdadeiros
+      quando os meios
       ópticos são homogêneos (têm um índice de refração fixo) e isotrópicos (têm as mesmas qualidades, independentemente
       da direção em que são apontados). cada uma das seguintes orientações (DEON, 2023):</p>
     <br>
@@ -200,73 +206,95 @@
         Aqui</a>
     </legend>
     <br>
-    <p class="margem">Princípio da independência dos raios de luz: Dois raios de luz se cruzam como se não existissem um em relação ao
+    <p class="margem">Princípio da independência dos raios de luz: Dois raios de luz se cruzam como se não existissem um
+      em relação ao
       outro (DEON, 2023).</p>
+      <div id="center">
     <img src="Imagens/optica3.png" alt="Foto Satelite">
     <legend style="text-align: center;"><a
         href="https://slideplayer.com.br/slide/363434/2/images/28/Princ%C3%ADpios+da+%C3%93ptica+Geom%C3%A9trica.jpg">
         Imagem Dísponivel
         Aqui</a>
     </legend>
+  </div>
     <br>
-    <p class="margem">Princípio da reversibilidade dos raios de luz: Feixes de luz podem se mover em qualquer direção enquanto viajam
+    <p class="margem">Princípio da reversibilidade dos raios de luz: Feixes de luz podem se mover em qualquer direção
+      enquanto viajam
       pelo espaço (DEON, 2023).</p>
     <br>
+    <div id="center">
     <img src="Imagens/optica4.png" alt="Foto Satelite">
     <legend style="text-align: center;"><a
         href="https://slideplayer.com.br/slide/363434/2/images/27/Princ%C3%ADpios+da+%C3%93ptica+Geom%C3%A9trica.jpg">
         Imagem Dísponivel
         Aqui</a>
     </legend>
+  </div>
     <br>
+    <div id="center">
     <h1><strong class="textosTitulo"><em> Cores </em> </strong></h1>
+  </div>
     <br>
-    <p class="margem">Uma parte da luz branca que atinge um objeto é absorvida pelo objeto. A luz absorvida pode ser transferida
+    <p class="margem">Uma parte da luz branca que atinge um objeto é absorvida pelo objeto. A luz absorvida pode ser
+      transferida
       diretamente para os átomos, onde pode excitá-los e fornecer-lhes energia térmica, por exemplo. No entanto, parte
       da luz incidente será refletida de volta, e é essa parte da luz que determina a cor dos corpos iluminados. Como
       resultado, quando olhamos para uma bola vermelha, só a vemos como vermelha porque a luz vermelha não pode ser
       absorvida por seus átomos (GOETHE, 2023).
     </p>
     <br>
-    <p class="margem"> Além disso, o cérebro decodifica estímulos visuais usando cores. A radiação visível é um espectro de frequências
+    <p class="margem"> Além disso, o cérebro decodifica estímulos visuais usando cores. A radiação visível é um espectro
+      de frequências
       de ondas eletromagnéticas que vão do infravermelho ao ultravioleta e são detectáveis ​​pelo olho humano
       (HELERBROCK, 2023).</p>
     <br>
-    <p class="margem"> Vários tipos de células no olho humano são sintonizadas em três picos de frequência que correspondem às cores
+    <p class="margem"> Vários tipos de células no olho humano são sintonizadas em três picos de frequência que
+      correspondem às cores
       verde, vermelho e azul. Nossa experiência com a cor é "criada" pelo cérebro humano dependendo da interação desses
       três fatores (GOETHE, 2023).</p>
     <br>
+
+    <div id="center">
     <h1><strong class="textosTitulo"><em>Luz Monocromatica </em> </strong></h1>
+  </div>
     <br>
-    <p class="margem">É aquela que apresenta idealmente uma única frequência, ou seja, uma única cor. A luz branca, por exemplo, é
+    <p class="margem">É aquela que apresenta idealmente uma única frequência, ou seja, uma única cor. A luz branca, por
+      exemplo, é
       policromática, ou seja, é composta por diversas frequências de luz (GOETHE, 2023).</p>
     <br>
+    <div id="center">
     <h1><strong class="textosTitulo"><em> Sistemas Opticos </em> </strong></h1>
-<br>
-<p class="margem">São dispositivos ópticos dispostos em diferentes formas e tamanhos para manipular a direção de propagação da luz. Existem sistemas ópticos de espelho e refrator (HELERBROCK, 2023).
-  Sombra e penumbra
-
-  </p>
-  <p class="margem">   Sistema óptico reflexivo: superfície polida, espelho plano, espelho esférico, etc (GOUVEIA, 2023).
-</p>
-  <br>
-  <p class="margem">  Sistema óptico refrativo: dioptria plana, espelho esférico côncavo-convexo, etc (MELO, 2023).
-</p>
-<br>
-<p class="margem">   As sombras ocorrem quando a luz é interceptada por certos meios opacos. Quando isso acontece, forma-se uma região do espaço onde nenhuma luz incide diretamente, chamada de sombra (GOETHE, 2023).</p>
-<br>
-<p class="margem">
-  A penumbra, por sua vez, é parcialmente iluminada pela luz e está localizada na região de transição entre sombra e luz. As penumbras são produzidas quando objetos opacos são iluminados por fontes de luz estendidas. Se você deseja obter uma compreensão mais profunda de como essas influências são formadas (GOETHE, 2023).</p>
-  <br>
-  <img src="Imagens/optica5.png" alt="Foto Satelite" >
-  <legend style="text-align: center;"><a href="https://slideplayer.com.br/slide/17276642/100/images/26/O+que+s%C3%A3o+sistemas+%C3%B3pticos.jpg">
-      Imagem Dísponivel
-      Aqui</a>
-  </legend>
   </div>
+    <br>
+    <p class="margem">São dispositivos ópticos dispostos em diferentes formas e tamanhos para manipular a direção de
+      propagação da luz. Existem sistemas ópticos de espelho e refrator (HELERBROCK, 2023).
+      Sombra e penumbra
 
-
-
+    </p>
+    <p class="margem"> Sistema óptico reflexivo: superfície polida, espelho plano, espelho esférico, etc (GOUVEIA,
+      2023).
+    </p>
+    <br>
+    <p class="margem"> Sistema óptico refrativo: dioptria plana, espelho esférico côncavo-convexo, etc (MELO, 2023).
+    </p>
+    <br>
+    <p class="margem"> As sombras ocorrem quando a luz é interceptada por certos meios opacos. Quando isso acontece,
+      forma-se uma região do espaço onde nenhuma luz incide diretamente, chamada de sombra (GOETHE, 2023).</p>
+    <br>
+    <p class="margem">
+      A penumbra, por sua vez, é parcialmente iluminada pela luz e está localizada na região de transição entre sombra e
+      luz. As penumbras são produzidas quando objetos opacos são iluminados por fontes de luz estendidas. Se você deseja
+      obter uma compreensão mais profunda de como essas influências são formadas (GOETHE, 2023).</p>
+    <br>
+    <div id="center">
+      <img src="Imagens/optica5.png" width="75%" alt="Foto Satelite">
+      <legend style="text-align: center;"><a
+          href="https://slideplayer.com.br/slide/17276642/100/images/26/O+que+s%C3%A3o+sistemas+%C3%B3pticos.jpg">
+          Imagem Dísponivel
+          Aqui</a>
+      </legend>
+    </div>
+  </div>
   <div class="rodape"></div>
 
 </body>
