Concerto de Leis e Optica

--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -17,130 +17,132 @@
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-<h1 style="text-align: center;">Tópicos</h1>
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+      <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Bibliografia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Bibliografia.html"><button type="button" class="btn">
+          <strong>Bibliografia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
 
     </div>
-    
+
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
-        class="MenuB">Menu </div></span> 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+        </div></span>
 
     </div>
   </div>
   </div>
   <div class="conteudo">
-    
-    <h1><strong class="textosTitulo"><em> Leis De Newton </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Leis De Newton </em> </strong></h1>
+    </div>
     <br>
-    <p class="margem">Você já ouviu falar no cara chamado Isaac Newton que certo dia caiu uma maçã na cabeça dele e ele propôs a Lei da
+    <p class="margem">Você já ouviu falar no cara chamado Isaac Newton que certo dia caiu uma maçã na cabeça dele e ele
+      propôs a Lei da
       Gravidade, então este mesmo cara (Newton) além de propor várias teorias e ser um dos maiores fisicos que ja se
       teve na historia e que contribuiu em todas as áreas de forma gigantesca, ele também propôs três leis que são
       fundamentais para a física e inclusive quando você for estudar física Leis de Newton é um assunto indispensável
@@ -151,24 +153,31 @@
 
 
     <br>
-    <img src="Imagens/R (1).jpeg" alt="partes das ondas" >
-    <legend style="text-align: center;"><a href="http://fisica-marian3.blogspot.com/"> Imagem Dísponivel
-        Aqui</a>
-    </legend>
+    <div id="center">
+      <img src="Imagens/R (1).jpeg" alt="partes das ondas" width="75%">
+      <legend style="text-align: center;"><a href="http://fisica-marian3.blogspot.com/"> Imagem Dísponivel
+          Aqui</a>
+      </legend>
+    </div>
     <br>
-    <h3><strong class="textosTitulo">Lei Da Inercia
-    </strong></h3>
+    <div id="center">
+      <h3><strong class="textosTitulo">Lei Da Inercia
+        </strong></h3>
+    </div>
     <br>
-    <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da Inércia.
+    <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da
+      Inércia.
       (HELERBROCK, Rafael, 2023).
     </p>
     <br>
-    <p class="margem"> “Segundo Rafael Helerbrock (2023) "A primeira lei de Newton, também conhecida como princípio da inércia, afirma
+    <p class="margem"> “Segundo Rafael Helerbrock (2023) "A primeira lei de Newton, também conhecida como princípio da
+      inércia, afirma
       que todo corpo permanece em seu estado de repouso ou em movimento retilíneo e uniforme caso as forças que atuem
       sobre ele se anulem.”
     </p>
     <br>
-    <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende ficar parado,
+    <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende
+      ficar parado,
       até venha alguém mexer nele, exemplo, seu celular, se você deixar ele no sofá ele ficará lá até alguém pegar ele,
       sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
       exemplo precisamos ir lá pro espaço, já que lá não tem ar nem gravidade para nos atrapalhar, agora dando o
@@ -178,13 +187,15 @@
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
     <br>
-    <img src="Imagens/tirinha.jpg" alt="partes das ondas">
+    <img src="Imagens/tirinha.jpg" alt="partes das ondas" width="100%">
     <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
         Aqui</a>
     </legend>
     <br>
-    <h3><strong class="textosTitulo"> Segunda Lei de Newton: Princípio Fundamental da Dinâmica
-      </strong></h3>
+    <div id="center">
+      <h3><strong class="textosTitulo"> Segunda Lei de Newton: Princípio Fundamental da Dinâmica
+        </strong></h3>
+    </div>
     <br>
     <p class="margem">
       A segunda Lei de Newton é o princípio Fundamental da Dinâmica, (HELERBROCK, 2023).
@@ -195,7 +206,8 @@
       aceleração é proporcional à sua massa."
 
     </p>
-    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa do corpo que
+    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa
+      do corpo que
       você quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
       Vamos pensar num exemplo assim: você tem duas bolas num campo de futebol, mas vamos dispensar a grama, ar, e o
       resto, quero dizer que não vamos levar em consideração atrito. Mas voltando às bolas, você tem uma bola de futebol
@@ -211,14 +223,15 @@
       também que algo pesado acelera mais que algo leve (HELERBROCK, 2023).
     </p>
     <br>
-    <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" >
-    <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm"> Ondas. Conceito,
-        natureza e
-        tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
-    <br>
+    <div id="center">
+      <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" width="100%">
+      <legend><a href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">Imagem Disponível Aqui</a></legend>
 
-    <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
-      </strong></h3>
+      <br>
+
+      <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
+        </strong></h3>
+    </div>
     <br>
     <p class="margem">
       “ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
@@ -235,15 +248,14 @@
       <br>
     </p>
     <br>
-    <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais">
-    <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Ondas. Conceito,
-        natureza e
-        tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
-
+    <div id="center">
+    <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" width="100%">
+    <legend><a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Imagem Disponível Aqui</a></legend>
+      </div>
   </div>
 
 
- 
+
   <div class="rodape"></div>
 
 </body>
