--- a/Optica.html
+++ b/Optica.html
@@ -137,18 +137,22 @@
   </div>
   </div>
   <div class="conteudo">
+    <div id="center">
     <h1><strong class="textosTitulo"><em> Optica </em> </strong></h1>
+  </div>
     <br>
     <p>Parte da física que estuda as leis relativas às radiações luminosas e aos fenômenos da visão.(Dicionário Oxford
       Languages).
       <br>
       <br>
     </p>
-    <img src="Imagens/optica1.png" alt="Foto Satelite">
+    <div id="center">
+    <img src="Imagens/optica1.png" alt="Foto Satelite" width="80%">
     <legend style="text-align: center;"><a href="https://mundoeducacao.uol.com.br/fisica/optica-geometrica.html">
         Imagem Dísponivel
         Aqui</a>
     </legend>
+  </div>
     <br>
     <p class="margem">
       A ciência da óptica examina como a luz interage com vários materiais e objetos à medida que viaja pelo espaço. A
@@ -164,7 +168,9 @@
       sua interação com a matéria, ao levar em conta os conhecimentos da física contemporânea (HELERBROCK, 2023)
     </p>
     <br>
+    <div id="center">
     <h1><strong class="textosTitulo"><em> Optica-Geometrica</em> </strong></h1>
+  </div>
     <br>
     <p class="margem">A luz é interpretada pela óptica geométrica como segmentos de uma linha reta, ou raios de luz. A
       direção e a
@@ -190,7 +196,9 @@
     <p class="margem">
       Fontes pontuais: se o tamanho da fonte de luz fosse considerado insignificante em comparação com o objeto que se
       pretendia iluminar (HELERBROCK, 2023).</p>
+      <div id="center">
     <h1><strong class="textosTitulo"><em>Principios da Optica Geometrica</em> </strong></h1>
+  </div>
     <br>
     <p class="margem">Essas ideias descrevem como os raios de luz agem em várias circunstâncias. Eles são verdadeiros
       quando os meios
@@ -199,18 +207,20 @@
     <br>
     <p class="margem">Princípio da propagação retilínea da luz: Os raios de luz avançam em um caminho reto.</p>
     <br>
-    <img src="Imagens/optica2.png" alt="Foto Satelite">
+    <div id="center">
+    <img src="Imagens/optica2.png" alt="Foto Satelite" width="80%">
     <legend style="text-align: center;"><a
         href="https://slideplayer.com.br/slide/363434/2/images/16/Princ%C3%ADpios+da+%C3%93ptica+Geom%C3%A9trica.jpg">
         Imagem Dísponivel
         Aqui</a>
     </legend>
+  </div>
     <br>
     <p class="margem">Princípio da independência dos raios de luz: Dois raios de luz se cruzam como se não existissem um
       em relação ao
       outro (DEON, 2023).</p>
       <div id="center">
-    <img src="Imagens/optica3.png" alt="Foto Satelite">
+    <img src="Imagens/optica3.png" alt="Foto Satelite" width="80%">
     <legend style="text-align: center;"><a
         href="https://slideplayer.com.br/slide/363434/2/images/28/Princ%C3%ADpios+da+%C3%93ptica+Geom%C3%A9trica.jpg">
         Imagem Dísponivel
@@ -223,7 +233,7 @@
       pelo espaço (DEON, 2023).</p>
     <br>
     <div id="center">
-    <img src="Imagens/optica4.png" alt="Foto Satelite">
+    <img src="Imagens/optica4.png" alt="Foto Satelite" width="80%">
     <legend style="text-align: center;"><a
         href="https://slideplayer.com.br/slide/363434/2/images/27/Princ%C3%ADpios+da+%C3%93ptica+Geom%C3%A9trica.jpg">
         Imagem Dísponivel
