--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -141,7 +141,7 @@
       <h1><strong class="textosTitulo"><em> Leis De Newton </em> </strong></h1>
     </div>
     <br>
-    <p class="margem">Você já ouviu falar no cara chamado Isaac Newton que certo dia caiu uma maçã na cabeça dele e ele
+    <p class="margem"> Certo dia caiu uma maçã na cabeça de Sir Isaac Newton que então
       propôs a Lei da
       Gravidade, então este mesmo cara (Newton) além de propor várias teorias e ser um dos maiores fisicos que ja se
       teve na historia e que contribuiu em todas as áreas de forma gigantesca, ele também propôs três leis que são
@@ -225,7 +225,8 @@
     <br>
     <div id="center">
       <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" width="100%">
-      <legend><a href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">Imagem Disponível Aqui</a></legend>
+      <legend><a href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">Imagem Disponível Aqui</a>
+      </legend>
 
       <br>
 
@@ -249,9 +250,10 @@
     </p>
     <br>
     <div id="center">
-    <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" width="100%">
-    <legend><a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Imagem Disponível Aqui</a></legend>
-      </div>
+      <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" width="100%">
+      <legend><a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Imagem Disponível Aqui</a>
+      </legend>
+    </div>
   </div>
 
 
