--- a/Ondas.html
+++ b/Ondas.html
@@ -158,7 +158,7 @@
 
     <br>
     <div id="center">
-      <img src="Imagens/ondapartes.png" alt="partes das ondas" width="800px">
+      <img src="Imagens/ondapartes.png" alt="partes das ondas" width="80%px">
       <legend style="text-align: center;"><a href="https://www.youtube.com/watch?v=M2D5-zXlD6A"> Imagem Dísponivel
           Aqui</a>
       </legend>
