--- a/sambaqui.html
+++ b/sambaqui.html
@@ -20,170 +20,182 @@
 
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-<h1 style="text-align: center;">Tópicos</h1>
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+      <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Bibliografia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Bibliografia.html"><button type="button" class="btn">
+          <strong>Bibliografia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
-  <a href="sambaqui.html"><button type="button" class="btn">
-    <strong>Sambaqui</strong>
-    <div id="container-stars">
-      <div id="stars"></div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="sambaqui.html"><button type="button" class="btn">
+          <strong>Sambaqui</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
     </div>
 
-    <div id="glow">
-      <div class="circle"></div>
-      <div class="circle"></div>
-    </div>
-  </button></a>
-    </div>
-    
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
-        class="MenuB">Menu </div></span> 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+        </div></span>
 
     </div>
   </div>
 
- <div>
+  <div>
 
-  <style>
-    div {
-      text-align: center;
-    }
-  </style>
-  
-  <h1 class="all"><strong>Sambaqui</strong></h1>
- <br>
- <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
- <br>
- <p class="all">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
- <br>
- <h2 class="all"><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
-   indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
-   tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
-   etc.”</strong></h2>
+    <style>
+      div {
+        text-align: center;
+      }
+    </style>
 
-
-   <p class="all">Figura 1 – Mapa dos sambaquis</p>
-
-
-   <img class="all" src="Imagens/imagem1 sambaqui.jpeg" alt="foto mapa">
-   <br>
+    <h1 class="all"><strong>Sambaqui</strong></h1>
+    <br>
+    <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
+    <br>
+    <p class="all">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de
+      sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de
+      Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
+    <br>
+    <h2 class="all"><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
+        indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
+        tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
+        etc.”</strong></h2>
 
 
-   <h2 class="all">O povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</h2>
-   <br>
-   <p class="all">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
+    <p class="all">Figura 1 – Mapa dos sambaquis</p>
 
 
-  <div class="rodape"></div>
+    <img class="all" src="Imagens/imagem1 sambaqui.jpeg" alt="foto mapa">
+    <br>
 
- </div>
+
+    <h2 class="all">O povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</h2>
+    <br>
+    <p class="all">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em
+      aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então
+      certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
+
+    <h2>"Como esse povo chegou até a América? E, pelos elementos que existem
+      na arqueologia, quando habitaram a região da Baía da Babitonga?"</h2>
+
+    <p>Como apresentado pelo Professor Ivan, este povo possuía traços extremamente asiáticos, tendo muita similaridade com os povos originários, popularmente chamados de Índios. Por este motivo e também por datação arqueológica, é muito teorizado que o povo sambaqui tenha vindo pelo Estreito de Bering. Já a duração Sambaquis é de aproximadamente é 3 mil à 5 mil anos atrás</p>
+
+    <h2>"Qual era a principal fonte de alimentação deles? Como se sabe essa
+      informação?"</h2>
+
+
+    <div class="rodape"></div>
+
+  </div>
 
 </body>
 
