--- a/sambaqui.html
+++ b/sambaqui.html
@@ -192,7 +192,10 @@
     <h2>"Qual era a principal fonte de alimentação deles? Como se sabe essa
       informação?"</h2>
       <br>
-
+      <p> A principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar. Eu sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram sobre isso na visita do museu do sambaqui em Joinville, e foi explicado na aula de história com o Professor Ivan Furmann.</p>
+      <br>
+      <p>Figura 2</p>
+      <img src="Imagens/sambaqui img 2" alt="sambaqui figura 2">
     <div class="rodape"></div>
 
   </div>
