--- a/sambaqui.html
+++ b/sambaqui.html
@@ -196,6 +196,14 @@
       <br>
       <p>Figura 2</p>
       <img src="Imagens/sambaqui img 2" alt="sambaqui figura 2">
+      <br>
+      <h2>"O que é um zoólito: Explique e apresente alguma foto que contenha um
+        exemplo de um deles."</h2>
+        <p>Os Zoólitos são esculturas talhadas em pedra, elas têm valor arqueológico e artístico.</p>
+        <br>
+        <p>Figura 3- Zoólitos</p>
+        <br>
+        <img src="imagens/imagem sambaqui figura 3" alt="figura 3">
     <div class="rodape"></div>
 
   </div>
