--- a/sambaqui.html
+++ b/sambaqui.html
@@ -195,7 +195,7 @@
       <p> A principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar. Eu sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram sobre isso na visita do museu do sambaqui em Joinville, e foi explicado na aula de história com o Professor Ivan Furmann.</p>
       <br>
       <p>Figura 2</p>
-      <img src="Imagens/sambaqui img 2" alt="sambaqui figura 2">
+      <img src="Imagens/sambaqui img2.jpeg" alt="sambaqui figura 2">
       <br>
       <h2>"O que é um zoólito: Explique e apresente alguma foto que contenha um
         exemplo de um deles."</h2>
@@ -203,7 +203,7 @@
         <br>
         <p>Figura 3- Zoólitos</p>
         <br>
-        <img src="imagens/imagem sambaqui figura 3" alt="figura 3">
+        <img src="Imagens/sambaqui img3.jpeg" alt="figura 3">
     <div class="rodape"></div>
 
   </div>
