--- a/sambaqui.html
+++ b/sambaqui.html
@@ -156,7 +156,7 @@
         text-align: center;
       }
     </style>
-
+    <div>
     <h1 class="all"><strong>Sambaqui</strong></h1>
     <br>
     <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
@@ -204,6 +204,7 @@
         <p>Figura 3- Zoólitos</p>
         <br>
         <img src="Imagens/sambaqui img3.jpeg" alt="figura 3">
+    </div>
     <div class="rodape"></div>
 
   </div>
