--- a/sambaqui.html
+++ b/sambaqui.html
@@ -174,7 +174,7 @@
     <p class="all">Figura 1 – Mapa dos sambaquis</p>
 
 
-    <img class="all" src="Imagens/imagem1 sambaqui.jpeg" alt="foto mapa">
+    <img class="all" src="Imagens/imagem1 sambaqui.jpeg" width="100%" alt="foto mapa">
     <br>
 
 
