--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
+    <a href="index.html"> <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1></a>
 
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -142,83 +142,38 @@
     <div id="main">
       <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
         </div></span>
-
-    </div>
+ </div>
   </div>
-  <br>
-  <div class="conteudo2">
-
-    <h1 style="text-align: center;"><strong class="textosTitulo"><em> Conteúdo </em> </strong></h1>
-    <br>
-    <p class="margem">Olá, este site, Física na Mente, é, foi, esta sendo feito por Anthony Gabriel, Claudio Anzini,
-      Pedro Malaquias e Gustavo Kruger.</p>
-    <p class="margem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolore amet recusandae vel aut
-      veritatis hic. Assumenda, debitis voluptate aspernatur cum fugit, alias doloremque nostrum vitae similique
-      repudiandae illo officia!</p>
-    <p class="margem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem quia porro neque similique
-      consectetur sunt aut aliquid maxime soluta? Quod, dicta. Doloremque repudiandae beatae consectetur eaque non
-      dolore dolorem quis.</p>
-    <br>
-    <div id="center">
-      <br>
-      <br>
-      <p class="margem">Biografia do Anthony</p>
-      <p class="margem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt accusamus velit error tempora
-        veritatis sit est architecto atque dolores placeat nesciunt aperiam voluptate odit optio, ipsam in adipisci?
-        Velit, ipsum?</p>
-      <br>
-
-      <br>
-    </div>
-    <div id="center">
-      <p class="margem">Biografia do Claudio</p>
-      <p class="margem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit modi vero minus ut. Quaerat
-        fuga officia aliquam facere illo soluta amet error iste, esse magni rerum nemo sunt magnam debitis!</p>
-      <br>
-
-
-    </div>
-    <br>
-    <div id="center">
-      <p class="margem">Biografia do Pedro</p>
-      <p class="class">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, accusantium nihil possimus iste
-        placeat fugiat voluptate velit corrupti quasi eligendi aut cupiditate impedit quod magni alias dolore doloremque
-        aliquid temporibus.</p>
-      <p class="class">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia inventore cum architecto
-        accusantium adipisci dolorem minima consequatur recusandae nisi consectetur, provident placeat voluptas,
-        voluptatum ea repellendus illo quas pariatur velit.</p>
-      <br>
-    </div>
-    <div id="center">
-
-      <br>
-    </div>
-    <div id="center">
-      <p class="margem">Biografia do Gustavo</p>
-      <p class="class">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum natus, mollitia adipisci autem,
-        sed quasi voluptatum, ullam exercitationem ipsum tempore quod vero. Dolores reiciendis nesciunt, aut a debitis
-        accusantium dignissimos.</p>
-      <p class="class">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa eos officia voluptatum laboriosam
-        non dignissimos itaque. Eaque repellendus ea veritatis repellat beatae eum facilis placeat cum, impedit
-        accusantium totam quaerat.</p>
-
-      <div class="grid-container">
-        <div class="grid-item"><img src="Imagens/run-palito.gif" alt=""></div>
-        <div class="grid-item"><img src="Imagens/run-palito.gif" alt=""></div>
-        <div class="grid-item"><img src="Imagens/run-palito.gif" alt=""></div>
-        <div class="grid-item"><img src="Imagens/run-palito.gif" alt=""></div>
-
-
-
-
-
+<div class="parteIndex">
+  <h1>Física Na Mente</h1>
+  <h2> O melhor site para você aprender Física</h2>
+  <a href="Leis De Newton.html">
+    <button type="button" class="btn">
+      <strong>Leis de Newton</strong>
+      <div id="container-stars">
+        <div id="stars"></div>
       </div>
-    </div>
 
+      <div id="glow">
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+    </button></a>
+    <a href="Leis De Newton.html">
+      <button type="button" class="btn">
+        <strong>Leis de Newton</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+</div>
 
-    <div class="rodape"></div>
-
+   
+  <br>
 </body>
-
 </html>
