--- a/sambaqui.html
+++ b/sambaqui.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
+    <a href="index.html"> <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1></a>
 
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
